sources/css/tyrian/less/header.less
.site-title {
  #gradient > .vertical(@start-color: darken(@gentoo-purple-grey, 10%); @end-color: @gentoo-purple-grey; @end-percent: 20%);
  background-color: @gray-lighter;
}

.site-label {
  .label;
  background-color: @gentoo-purple;
  color: white;
}

.site-label-svg-fix {
  vertical-align: 225%;
}

.site-title-buttons {
  margin-top: 1em;
  margin-right: 1em;
  .pull-right;
  .hidden-xs;
}

.site-title-button-group {
  .btn-group;
}

.site-title-button-group > .btn { &:extend(.btn-sm); }

.get-gentoo {
  .btn;
  .btn-primary;
  color: white !important;
}

.gentoo-org-sites {
  .btn;
  .btn-default;
  color: black !important;
}

.logo {
  display: inline-block;
}

.site-logo {
  display: inline-block;

  object {
    pointer-events: none;
  }
}

body {
  border-top: 1px solid @gentoo-purple;
}

.tyrian-navbar {
  .navbar;
  .navbar-default;
  .navbar-static-top;
  .clearfix;
}

